# rules-go-issue-1987

./: .bazelrc  .dockerignore  BUILD.bazel  Dockerfile  README.txt  WORKSPACE  go.mod
